--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,3 @@
 spring.application.name=EncurtaURL
 
-# === PostgreSQL ===
-spring.datasource.url=${datasourceUrl}
-spring.datasource.username=${datasourceUsername}
-spring.datasource.password=${datasourcePassword}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# === JPA / Hibernate ===
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-
-# === DevTools ===
-spring.devtools.restart.exclude=static/**,public/**,templates/**
-spring.devtools.livereload.enabled=true
-
-# === CORS ===
-spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-
-# === Timezone e Locale (opcional, mas recomendado para padronizar datas) ===
-spring.jackson.time-zone=America/Sao_Paulo
-spring.jackson.locale=pt_BR
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.profiles.active=dev
