feat: Update README

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Host Info ===
 host.info.url=${API_HOSTNAME}
+host.jwt.secret=${API_SECRET}
 
 # === JPA / Hibernate ===
 spring.jpa.hibernate.ddl-auto=update
