fix: Arquitetura de projeto hexagonal

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,15 +14,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
 # === DevTools ===
 spring.devtools.restart.exclude=static/**,public/**,templates/**
 spring.devtools.livereload.enabled=true
-
-# === CORS ===
-spring.web.cors.allowed-origins=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+logging.level.org.springframework.security=DEBUG
 
 # === Timezone e Locale (opcional, mas recomendado para padronizar datas) ===
 spring.jackson.time-zone=America/Sao_Paulo
