fix: Refatoração de código, aprimorando desempenho, centralizando tratamento de exceções

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.password=SQLDatabase123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # === Host Info ===
-host.info.url=https://localhost:8080/
+host.info.url=https://localhost:8080
 host.jwt.secret=chavedeteste123
 
 # === JPA / Hibernate ===
